Added missing order service and User guide wip
